--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/harsimrankang/canteen-ordering-project.git"
+    "url": "git+https://harmanpreetkaur689.github.io/Dine-Square/."
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/harsimrankang/canteen-ordering-project/issues"
+    "url": "https://harmanpreetkaur689.github.io/Dine-Square/."
   },
-  "homepage": "https://harsimrankang.github.io/canteen-ordering-project"
+  "homepage": "https://harmanpreetkaur689.github.io/Dine-Square/."
 }
